// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-uploader/UploadState should render VIEW_ERROR correctly 1`] = `
<div
  className="bcu-upload-state"
>
  <div>
    <ErrorEmptyState />
    <UploadStateContent
      message={
        <FormattedMessage
          defaultMessage="A network error has occurred while trying to upload."
          id="be.uploadError"
        />
      }
    />
  </div>
  <div
    className="bcu-drag-drop-overlay"
  />
</div>
`;

exports[`elements/content-uploader/UploadState should render VIEW_UPLOAD_EMPTY correctly 1`] = `
<div
  className="bcu-upload-state"
>
  <div>
    <UploadEmptyState />
    <UploadStateContent
      fileInputLabel={
        <FormattedMessage
          defaultMessage="Browse your device"
          id="be.uploadEmptyFileInput"
        />
      }
      folderInputLabel={false}
      message={
        <FormattedMessage
          defaultMessage="Drag and drop files"
          id="be.uploadEmptyWithFolderUploadDisabled"
        />
      }
      onChange={[Function]}
    />
  </div>
  <div
    className="bcu-drag-drop-overlay"
  />
</div>
`;

exports[`elements/content-uploader/UploadState should render VIEW_UPLOAD_EMPTY correctly when folder upload is enabled 1`] = `
<div
  className="bcu-upload-state"
>
  <div>
    <UploadEmptyState />
    <UploadStateContent
      fileInputLabel={
        <FormattedMessage
          defaultMessage="Browse your device"
          id="be.uploadEmptyFileInput"
        />
      }
      folderInputLabel={
        <FormattedMessage
          defaultMessage="Select Folders"
          id="be.uploadEmptyFolderInput"
        />
      }
      message={
        <FormattedMessage
          defaultMessage="Drag and drop files and folders"
          id="be.uploadEmptyWithFolderUploadEnabled"
        />
      }
      onChange={[Function]}
    />
  </div>
  <div
    className="bcu-drag-drop-overlay"
  />
</div>
`;

exports[`elements/content-uploader/UploadState should render VIEW_UPLOAD_IN_PROGRESS correctly 1`] = `
<div
  className="bcu-upload-state"
>
  <div>
    <UploadEmptyState />
    <UploadStateContent
      message={
        <FormattedMessage
          defaultMessage="Drag and drop to add additional files"
          id="be.uploadInProgress"
        />
      }
    />
  </div>
  <div
    className="bcu-drag-drop-overlay"
  />
</div>
`;

exports[`elements/content-uploader/UploadState should render VIEW_UPLOAD_SUCCESS correctly  when folder upload is enabled 1`] = `
<div
  className="bcu-upload-state"
>
  <div>
    <UploadSuccessState />
    <UploadStateContent
      fileInputLabel={
        <FormattedMessage
          defaultMessage="Select More Files"
          id="be.uploadSuccessFileInput"
        />
      }
      folderInputLabel={
        <FormattedMessage
          defaultMessage="Select More Folders"
          id="be.uploadSuccessFolderInput"
        />
      }
      message={
        <FormattedMessage
          defaultMessage="Success! Your files have been uploaded."
          id="be.uploadSuccess"
        />
      }
      onChange={[Function]}
      useButton={false}
    />
  </div>
  <div
    className="bcu-drag-drop-overlay"
  />
</div>
`;

exports[`elements/content-uploader/UploadState should render VIEW_UPLOAD_SUCCESS correctly 1`] = `
<div
  className="bcu-upload-state"
>
  <div>
    <UploadSuccessState />
    <UploadStateContent
      fileInputLabel={
        <FormattedMessage
          defaultMessage="Select More Files"
          id="be.uploadSuccessFileInput"
        />
      }
      folderInputLabel={false}
      message={
        <FormattedMessage
          defaultMessage="Success! Your files have been uploaded."
          id="be.uploadSuccess"
        />
      }
      onChange={[Function]}
      useButton={false}
    />
  </div>
  <div
    className="bcu-drag-drop-overlay"
  />
</div>
`;
